--- a/src/it/unina/foodlab/ui/CorsiEditorDialog.fxml
+++ b/src/it/unina/foodlab/ui/CorsiEditorDialog.fxml
@@ -8,6 +8,7 @@
 <DialogPane fx:id="dialogPane" prefWidth="560" style="-fx-background-color: linear-gradient(to bottom,#242c2f,#20282b); -fx-border-radius: 12; -fx-border-color: rgba(255,255,255,0.06); -fx-border-width: 1; -fx-font-family: 'Segoe UI', Inter, system-ui; -fx-font-size: 13px;"
 			xmlns="http://javafx.com/javafx"
 			xmlns:fx="http://javafx.com/fxml/1"
+			stylesheets="@/it/unina/foodlab/util/dark-theme.css"
 			fx:controller="it.unina.foodlab.controller.CorsoEditorDialogController">
 
     <header>
