--- a/src/it/unina/foodlab/ui/SessioniPreview.fxml
+++ b/src/it/unina/foodlab/ui/SessioniPreview.fxml
@@ -9,6 +9,7 @@
             fx:controller="it.unina.foodlab.controller.SessioniPreviewController"
             fx:id="dialogPane"
             prefWidth="760" prefHeight="560"
+            stylesheets="@/it/unina/foodlab/util/dark-theme.css"
             style="-fx-background-color: linear-gradient(to bottom,#242c2f,#20282b);
                    -fx-border-color: rgba(255,255,255,0.06);
                    -fx-background-radius:12; -fx-border-radius:12;
